# PythonHeatmap

./: .gitignore  LICENSE  ReadMe.md  Untitled.ipynb  fit_to_csv.py  heatmap.html  personal_heatmap.py  pyproject.toml  selenium_downloader.py  simple_heatmap.py
.github/workflows/: lint.yml
csvdata/: 2018-09-17_07-21-02.csv  2018-09-19_18-41-34.csv  2018-09-20_09-39-50.csv  2018-09-23_19-35-01.csv  2018-09-29_08-23-36.csv  2018-10-04_06-03-08.csv  2018-10-07_08-21-31.csv  2018-10-08_10-33-26.csv  2018-10-10_06-35-54.csv  2018-10-14_17-02-48.csv  2018-10-16_17-51-06.csv  2018-10-17_07-55-12.csv  2018-10-20_10-03-15.csv  2018-10-23_07-13-21.csv  2018-10-28_09-00-16.csv
gpxdata/: 2018-09-17_07-21-02.gpx  2018-09-19_18-41-34.gpx  2018-09-20_09-39-50.gpx  2018-09-23_19-35-01.gpx  2018-09-29_08-23-36.gpx  2018-10-04_06-03-08.gpx  2018-10-07_08-21-31.gpx  2018-10-08_10-33-26.gpx  2018-10-10_06-35-54.gpx  2018-10-14_17-02-48.gpx  2018-10-16_17-51-06.gpx  2018-10-17_07-55-12.gpx  2018-10-20_10-03-15.gpx  2018-10-23_07-13-21.gpx  2018-10-28_09-00-16.gpx
tcxdata/: 2018-09-17_07-21-02.tcx  2018-09-19_18-41-34.tcx  2018-09-20_09-39-50.tcx  2018-09-23_19-35-01.tcx  2018-09-29_08-23-36.tcx  2018-10-04_06-03-08.tcx  2018-10-07_08-21-31.tcx  2018-10-10_06-35-54.tcx  2018-10-14_17-02-48.tcx  2018-10-16_17-51-06.tcx  2018-10-17_07-55-12.tcx  2018-10-20_10-03-15.tcx  2018-10-23_07-13-21.tcx  2018-10-28_09-00-16.tcx
