[project]
name = "pythonheatmap"
version = "0.1.0"
description = "Make a simple heatmap from .fit and .gpx files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitparse",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytz>=2026.1.post1",
    "selenium>=4.41.0",
]

[tool.uv.sources]
fitparse = { git = "https://github.com/dtcooper/python-fitparse" }
